<resources>
    <string name="app_name">Diary app</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="back_button">Back</string>
    <string name="usernameText">Username</string>
    <string name="account_settings">Account Setting Page</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="change_username">Change Username</string> 
    <string name="change_password">Change Password</string> 
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="select_date">Select Date</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_old_username">Enter Old Username</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="passwordText">Password</string>
    <string name="your_username">Your Username</string>
    <string name="your_post">Your Post</string>
    <string name="reply">Reply</string>
    <string name="setting">Settings</string>
    <string name="sync_data">Sync your data</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="switch_dark_mode">Switch Dark Mode</string>
    <string name="language">Language</string>
    <string name="text_size">Text Size</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="email">Email</string>
    <string name="pieChartName">emotion</string>
    <string name="frequencyStats">Frequency statistics</string>
    <string name="emotionStats">Emotion statistics</string>
    <string name="diaryTitle">Title...</string>
    <string name="diaryContent...">Write more here...</string>
    <string name="saveButton">Save</string>
    <string name="settingToast">Changes have been applied</string>
    <string name="homeNavBtn">Home</string>
    <string name="accountNavBtn">Account</string>
    <string name="settingNavBtn">Settings</string>
    <string name="syncNavBtn">Sync Data</string>
    <string name="settingsDarkMode">Dark mode</string>
    <string name="settingsLanguage">Language</string>
    <string name="settingsTextSize">Text size</string>
    <string name="settingsApplyChange">Apply changes</string>
    <string name="settingsTitle">Settings</string>
    <string name="insertSuccess">Insert success</string>
    <string name="insertFail">Insert fail</string>
</resources>