<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    android:id="@+id/loginView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp">

        <!-- Hình nền trên -->

        <!-- Chữ DIARY không xoay (thay vì xoay gây lỗi khi bàn phím hiện) -->
        <ImageView
            android:id="@+id/loginBackground"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:scaleType="fitXY"
            android:src="@drawable/login_background" />

        <TextView
            android:id="@+id/tvFeelink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FEELINK"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/cooper_black"/>

        <!-- Ô nhập email -->
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email"
            android:padding="10dp"
            android:textSize="16sp" />

        <!-- Ô nhập Password -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:hint="@string/passwordText"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="16sp" />

        <!-- Nút Đăng nhập -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@null"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <!-- Text Đăng ký -->
        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:clickable="true"
            android:layout_marginTop="10dp" />

    </LinearLayout>
</ScrollView>
