<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    tools:context=".ui.activities.RegisterActivity">

    <!-- Tiêu đề -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Make\nyour new\nAccount"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <!-- Ô nhập Username -->
    <TextView
        android:id="@+id/tvUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernameText"
        android:textSize="14sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/input_field"
        android:hint="@string/username"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvUsernameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <!-- Ô nhập Password -->
    <TextView
        android:id="@+id/tvPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordText"
        android:textSize="14sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/input_field"
        android:hint="@string/enter_password"
        android:padding="10dp"
        android:textSize="16sp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <!-- Nút đăng ký -->
    <Button
        android:id="@+id/btnSignup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/signup"
        android:backgroundTint="#B0BEC5"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>